--- a/cap04/ex4_2.html
+++ b/cap04/ex4_2.html
@@ -1,12 +1,34 @@
+<!--Crie um programa que cálcula o peso ideal para mulheres e homens, sabendo que o peso ideal para homens é (22*altura²), e de mulher é (21*altura²), utilizando input do tipo radio-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Exemplo 4.2</title>
+    <link rel="icon" type="image/png" href="img/livrojs.png">
 </head>
 <body>
-    
+    <img src="img/ex4_2.jpg" alt="Balança de Peso">
+    <h1>Programa Cálculo do Peso Ideal</h1>
+    <Form>
+        <p>
+            Nome:
+            <input type="text" id="inNome">
+        </p>
+        <p>
+            Sexo:
+            <input type="radio" name="sexo" id="inMasculino" required> Masculino 
+            <input type="radio" name="sexo" id="inFeminino" required> Feminino 
+        </p>
+        <p>
+            Altura:
+            <input type="text" id="inAltura">
+        </p>
+        <input type="submit" value="Calcular Peso Ideal">
+        <button onclick="limparCampos()">Limpar Campos</button>
+        <h3 id="inResultado"></h3>
+    </Form>
+    <script src="js/ex4_2.js"></script>
 </body>
 </html>
