--- a/cap06/ex6_1.html
+++ b/cap06/ex6_1.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>ex6_1</title>
 </head>
 <body>
+    <img src="img/ex6_1.jpg" class="alta">
     <h1>Consultório Odontológico</h1>
     <form>
         <p>
             Paciente:
-            <input type="text" id="inPaciente" autocomplete="off">
+            <input type="text" id="inPaciente" required>
             <input type="button" id="btAdicionar" value="Adicionar">
             <input type="button" id="btAdicionarUrgente" value="Urgência">
             <input type="button" id="btAtender" value="Atender">
         </p>
     </form>
-    <h3 id="inAtendimento"></h3>
+    <h3 id="inAtendimento">
+        <span class="fonte-azul"></span>
+    </h3>
     <h5 id="inListaDeEspera"></h5>
     <script src="js/ex6_1.js"></script>
 </body>
