--- a/cap07/ex7_7.html
+++ b/cap07/ex7_7.html
@@ -19,7 +19,7 @@
         <div>
             <input type="button" value="Remover Espaços" id="btRemoveEspaco" class="exibe">
             <input type="button" value="Trocar letras" id="btTrocaLetra" class="exibe">
-            <div class="oculta" style="padding-top: 20px;">
+            <div id="inDivTroca" class="oculta" style="padding-top: 20px;">
                 <a>
                     Letra antiga:
                     <input type="text" id="inLetraAntiga">
