--- a/cap07/ex7_10b.html
+++ b/cap07/ex7_10b.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Ex7_10b</title>
+    <title>ex7_10b</title>
 </head>
 <body>
     <img src="img/exerc.jpg">
