--- a/cap08/ex8_1.html
+++ b/cap08/ex8_1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ex8_1</title>
 </head>
 <body>
     <script src="js/ex8_1.js"></script>
