--- a/cap08/ex8_2.html
+++ b/cap08/ex8_2.html
@@ -24,9 +24,7 @@
         </label>
         <input type="button" id="btCalcula" value="Classificar - Calcular Entrada e Parcelas">
     </form>
-    <h3 id="resp1"></h3>
-    <h3 id="resp2"></h3>
-    <h3 id="resp3"></h3>
+    <h3 id="resposta"></h3>
     <script src="js/ex8_2.js"></script>
 </body>
 </html>
